fixed up packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,12 +5,12 @@ author = Carlos Meza
 author-email = carlos@digitalr00ts.com
 description  = AWS boto3 helper.
 description-content-type = text/plain
-;long_description = file: README.rst
-;long_description_content_type = text/x-rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 ;url =
-;project_urls =
+project_urls =
 ;    Bug Tracker =
-;    Source Code =
+    Source Code = https://gitlab.com/digitlar00ts/boto-remora
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: System Administrators
