--- a/tox.ini
+++ b/tox.ini
@@ -8,18 +8,18 @@ envlist = pypy3{6},py3{7,8},lint,style,type,sec,pkg
 [testenv]
 description = unit tests
 deps =
-    coverage == 4.5.3
-    pytest == 4.6.2
-    pytest-cov == 2.7.1
-    pytest-xdist == 1.28.0
+    coverage == 4.5.4
+    pytest == 5.2.4
+    pytest-cov == 2.8.1
+    pytest-xdist == 1.30.0
 commands =
     pytest -c ./tox.ini \
-        --cov sample \
-        --cov-report=xml:{toxworkdir}/coverage-{envname}.xml \
-        --cov-report=html:{toxworkdir}/htmlcov-{envname} \
-        --junitxml {toxworkdir}/pytest-{envname}.junit.xml \
-        -n={env:PYTEST_XDIST_PROC_NR:auto} \
-        {posargs}
+    --cov boto_remora \
+    --cov-report=xml:{toxworkdir}/coverage-{envname}.xml \
+    --cov-report=html:{toxworkdir}/htmlcov-{envname} \
+    --junitxml {toxworkdir}/pytest-{envname}.junit.xml \
+    -n={env:PYTEST_XDIST_PROC_NR:auto} \
+    {posargs}
 
 [testenv:lint]
 description = static analysis
