--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,6 @@ verify_ssl = true
 better_exceptions = {version = "*",index = "pypi"}
 pylint = "*"
 isort = {extras = ["pyproject"],version = "*"}
-mypy = "*"
-bandit = "*"
 notebook = "*"
 
 [packages]
@@ -16,3 +14,6 @@ boto-remora = {editable = true,path = "."}
 
 [requires]
 # python_version = "3.7"
+
+[scripts]
+install = "pipenv install --dev --skip-lock"
