--- a/tox.ini
+++ b/tox.ini
@@ -6,20 +6,28 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 envlist = pypy3{6},py3{7,8},lint,style,type,sec,pkg
 
 [testenv]
-description = unit tests
+description = Execution Tests
+basepython =
+    py3: python3
+    py36: python3.6
+    py37: python3.7
+    py38: python3.8
+    py39: python3.9
+    pypy36: pypy3.6
 deps =
-    coverage == 4.5.4
-    pytest == 5.2.4
+    coverage[toml] == 5.0.4
+    pytest == 5.4.1
     pytest-cov == 2.8.1
-    pytest-xdist == 1.30.0
+    pytest-xdist == 1.31.0
+    coveralls: coveralls
 commands =
     pytest -c ./tox.ini \
-    --cov boto_remora \
     --cov-report=xml:{toxworkdir}/coverage-{envname}.xml \
     --cov-report=html:{toxworkdir}/htmlcov-{envname} \
     --junitxml {toxworkdir}/pytest-{envname}.junit.xml \
     -n={env:PYTEST_XDIST_PROC_NR:auto} \
     {posargs}
+    coveralls: coveralls
 
 [testenv:lint]
 description = static analysis
@@ -36,15 +44,17 @@ skip_install = true
 deps =
     black == 19.10b0
     isort[pyproject] == 4.3.21
+    flynt == 0.45.4
 commands =
     black --check src/ setup.py tests/
     isort --check-only --recursive src/ setup.py tests/
+    flynt --line_length 98 --transform-concats --fail-on-change src/ setup.py tests/
 
 [testenv:type]
 description = type checking
 basepython = python3
 deps =
-    pytype == 2019.05.31
+    pytype == 2020.2.20
 commands = pytype src/
 
 [testenv:sec]
@@ -64,8 +74,8 @@ basepython = python3
 skip_install = true
 deps =
     pyroma == 2.6
-    readme_renderer[md] == 24.0
-    twine == 3.0.0
+    readme_renderer[md] == 25.0
+    twine == 3.1.1
 commands_pre =
     python3 setup.py sdist bdist_wheel
 commands =
@@ -73,6 +83,9 @@ commands =
     twine check dist/*
 
 [pytest]
-minversion = 4.1
+minversion = 5.2
 testpaths = tests
 addopts = --verbosity=2 --showlocals -ra --cov-report=term
+log_cli = true
+log_level = DEBUG
+junit_family = xunit2
